# CircuitPython_EPD_2in13_B

./: LICENSE  README.md  README.rst  README.rst.license  epd_2in13_b.py  pyproject.toml  requirements.txt
.github/PULL_REQUEST_TEMPLATE/: adafruit_circuitpython_pr.md
examples/: epd_2in13_b_simpletest.py
